# news_from_future

./: .env.example  .gitignore  Makefile  README.md  codecov.yml  future-news.service  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  publish-docs.yml
.run/: Fetch News.run.xml  Generate Example.run.xml  Run Project.run.xml  Run Tests with Coverage.run.xml  Run Tests.run.xml
app/: config.py
app/models/: generation.py  news.py
app/routers/: frontend.py  generation.py  news.py
app/services/: llm_service.py  news_service.py  scheduler.py
scripts/: README.md  freeze_dependencies.py  manage_deps.py  set_ollama_model.py  use_wildcard_versions.py
static/: index.html
static/css/: styles.css
static/js/: main.js
tests/: conftest.py  test_api.py  test_llm_service.py  test_news_service.py
